# reactos

./: techstack.md  techstack.yml
.github/workflows/: build.yml
base/setup/lib/: fsutil.c  fsutil.h  setuplib.c  setuplib.h
base/setup/reactos/: CMakeLists.txt  drivepage.c  reactos.c  reactos.h  resource.h
base/setup/usetup/: chkdsk.c  chkdsk.h  format.c  format.h  partlist.c  usetup.c
base/setup/welcome/: CMakeLists.txt
base/system/userinit/: livecd.c
boot/: boot_images.cmake
boot/bootdata/: CMakeLists.txt  bootcd.ini  txtsetup.sif
boot/bootdata/bootcd/: unattend.inf
boot/bootdata/bootcdregtest/: unattend.inf
boot/freeldr/freeldr/: pcat.cmake
dll/apisets/: api-ms-win-crt-private-l1-1-0.spec
dll/cpl/hotplug/: hotplug.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/include/: ntdllp.h
dll/ntdll/ldr/: ldrinit.c
dll/win32/devmgr/: precomp.h
dll/win32/iernonce/: dialog.cpp  dialog.h
dll/win32/kernel32/: kernel32.spec
dll/win32/msvcrt/: msvcrt.spec
dll/win32/newdev/: newdev.c
dll/win32/setupapi/: CMakeLists.txt  parser.c  queue.c
media/doc/: WINESYNC.txt
modules/: CMakeLists.txt
modules/rostests/winetests/setupapi/: CMakeLists.txt  misc.c  stringtable.c
ntoskrnl/: ntos.cmake
ntoskrnl/include/internal/: mm.h
ntoskrnl/kdbg/: kdb_symbols.c
ntoskrnl/ke/amd64/: context.c  except.c  kiinit.c  trap.S
ntoskrnl/mm/: mmfault.c  mminit.c
ntoskrnl/mm/ARM3/: mdlsup.c  miarm.h  mminit.c  pagfault.c  pfnlist.c  procsup.c  syspte.c  virtual.c
ntoskrnl/ob/: obhandle.c
sdk/cmake/: CMakeMacros.cmake  config.cmake  msvc.cmake
(+85 files in other folders)
